{{$NEXT}}

0.25   2015-01-04

- HTML output now uses the HTML5 doctype. In addition, table cell alignment is
  set using a style tag in generated HTML, rather than the deprecated-in-HTML5
  "align" attribute.

- The Markdent::Handler::HTMLStream::Document and Markdent::Simple::Document
  classes now accept optional charset and language parameters.

- The HTML output for table cells was broken. Cells always ended with </th>
  even for body cells. Reported by Polina Shubina. GitHub PR #2.

- Replaced Class::Load with Module::Runtime.


0.24   2014-01-25

- Shut up enum warnings from the latest Moose (2.1200). Patch by Zoffix. RT
  #92274.


0.23   2013-12-13

- Added support for drunken (42, 5, 3) and lazy (1, 1, 1) ordered lists, per
  the Markdown spec -
  http://daringfireball.net/projects/markdown/syntax#list. Based on tests and
  patch from Jason McIntosh.


0.22   2012-07-22

* All dialects except the Standard dialect are now roles. This makes it
  possible to create a parser that parses multiple dialects. It's possible for
  dialects to have conflicting parsing rules, in which case the results are
  unpredictable.

  This is a backwards incompatible change, but should not break most code,
  unless you have implemented your own dialect, or you were explicitly setting
  a block or span parser class to something like

      block_parser_class => 'Markdent::Dialect::Theory::BlockParser'

  But there was really no good reason to do this.

- The Standard dialect block/span parser classes are now named
  Markdent::Parser::BlockParser and ::SpanParser.

- The use of a "dialect" as a named parameter has been replaced by
  "dialects". The "dialects" parameter can be either a string or an array ref
  of strings. However, the "dialect" parameter is still accepted for backwards
  compatibility. This may be removed in the future.

- The Standard dialect now parses two spaces at the end of a line as a line