@@ -330,8 +330,10 @@ EOF
         },
     ];
 
-    parse_ok( $text, $expect,
-        'two html blocks and a paragraph in the middle' );
+    parse_ok(
+        $text, $expect,
+        'two html blocks and a paragraph in the middle'
+    );
 }
 
 {
@@ -358,8 +360,10 @@ EOF
         ],
     ];
 
-    parse_ok( $text, $expect,
-        'html inside code block is not treated as html' );
+    parse_ok(
+        $text, $expect,
+        'html inside code block is not treated as html'
+    );
 }
 
 {
@@ -432,6 +436,51 @@ EOF
     ];
 
     parse_ok( $text, $expect, 'html comments, standalone and inline' );
+}
+
+{
+    my $text = <<'EOF';
+Using pair of &laquo;entities&raquo; and &THORN; and &sup2;&#37;
+EOF
+
+    my $expect = [
+        { type => "paragraph" },
+        [
+            {
+                text => "Using pair of ",
+                type => "text",
+            }, {
+                type   => "html_entity",
+                entity => "laquo",
+            }, {
+                type => "text",
+                text => "entities",
+            }, {
+                entity => "raquo",
+                type   => "html_entity",
+            }, {
+                type => "text",
+                text => " and ",
+            }, {
+                entity => "THORN",
+                type   => "html_entity",
+            }, {
+                type => "text",
+                text => " and ",
+            }, {
+                entity => "sup2",
+                type   => "html_entity",
+            }, {
+                entity => "#37",
+                type   => "html_entity",
+            }, {
+                text => "\n",
+                type => "text",
+            },
+        ],
+    ];
+
+    parse_ok( $text, $expect, 'two wrapped html entities' );
 }
 
 done_testing();
